# freqtweak

./: INSTALL  Makefile.am  Makefile.in  NEWS  README  README.CVS  THANKS  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in  reconf
doc/: Makefile  Makefile.am  Makefile.in  index.html  screenshots.html  usagehelp.html
src/: FTactiveBarGraph.cpp  FTactiveBarGraph.hpp  FTapp.cpp  FTapp.hpp  FTconfigManager.cpp  FTconfigManager.hpp  FTdspManager.cpp  FTdspManager.hpp  FThelpWindow.cpp  FThelpWindow.hpp  FTioSupport.cpp  FTioSupport.hpp  FTjackSupport.cpp  FTjackSupport.hpp  FTmainwin.cpp  FTmainwin.hpp  FTmodRandomize.cpp  FTmodRandomize.hpp  FTmodRotate.cpp  FTmodRotate.hpp  FTmodRotateLFO.cpp  FTmodShift.cpp  FTmodShift.hpp  FTmodValueLFO.cpp  FTmodulatorDialog.cpp  FTmodulatorDialog.hpp  FTmodulatorGui.cpp  FTmodulatorGui.hpp  FTmodulatorI.cpp  FTmodulatorI.hpp  FTmodulatorManager.cpp  FTportSelectionDialog.cpp  FTportSelectionDialog.hpp  FTpresetBlendDialog.cpp  FTpresetBlendDialog.hpp  FTpresetBlender.cpp  FTpresetBlender.hpp  FTprocBoost.cpp  FTprocBoost.hpp  FTprocCompressor.cpp  (+39 more)
